<resources>
    <string name="app_name">ExcelLassonde</string>
    <string name="email_address">Email</string>
    <string name="firstName">First Name</string>
    <string name="button_bookSession">Book A Session</string>
    <string name="button_leaveReview">Leave A Review</string>
    <string name="button_chooseTutor">Choose Your Tutor</string>
    <string name="Text_chooseCourse">Which Course would you like help in?</string>
    <string name="alert_beginning_text">Please confirm the following details</string>
    <string name="group_session_email">Please add here the emails of the other students joining the session</string>
    <string name="hours_notification">Please note that this particular tutor has reached the available hours they are willing to tutor. This session might not be confirmed, we apologize for the inconvenience</string>
    <string name="tutor_name">Tutor:</string>
    <string name="course_name">Course:</string>
    <string name="start_session">Starts:</string>
    <string name="end_session">Ends:</string>
    <string name="session_type">Type:</string>
    <string name="topic">Topic(s):</string>
    <string name="topic_helper_text">Please add here the topics you need help with</string>
    <string name="button_send_request">Send Request</string>
    <string name="button_back">Back</string>
    <string name="padding">10dp</string>
    <string-array name="time_list">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="courses_list">
        <item>EECS</item>
        <item>MATH</item>
        <item>PHYS</item>
        <item>CHEM</item>
        <item>ENG</item>
        <item>EECS</item>
        <item>MATH</item>
        <item>PHYS</item>
        <item>CHEM</item>
        <item>ENG</item>
        <item>EECS</item>
        <item>MATH</item>
        <item>PHYS</item>
        <item>CHEM</item>
        <item>ENG</item>
        <item>EECS</item>
        <item>MATH</item>
        <item>PHYS</item>
        <item>CHEM</item>
        <item>ENG</item>
        <item>EECS</item>
        <item>MATH</item>
        <item>PHYS</item>
        <item>CHEM</item>
        <item>ENG</item>
        <item>ENG</item>
        <item>EECS</item>
        <item>MATH</item>
        <item>PHYS</item>
        <item>CHEM</item>
        <item>ENG</item>
        <item>ENG</item>
        <item>EECS</item>
        <item>MATH</item>
        <item>PHYS</item>
        <item>CHEM</item>
        <item>ENG</item>

    </string-array>
    <string-array name="session_type_dropdown">
        <item>One-on-One</item>
        <item>Group</item>
    </string-array>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
</resources>
