<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.excellassonde.bookatutor.SessionReview">



    <TextView
        android:id="@+id/alert_beginning_text"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="38dp"
        android:text="@string/alert_beginning_text"
        android:textAlignment="center"
        android:textColor="@color/ELPurple"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tutor_name"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="@string/tutor_name"
        android:textAlignment="center"
        android:textColor="@color/ELPurple"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tutor_name_edit"
        app:layout_constraintTop_toBottomOf="@+id/alert_beginning_text" />

    <TextView
        android:id="@+id/course_name"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/course_name"
        android:textAlignment="center"
        android:textColor="@color/ELPurple"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/course_name_edit"
        app:layout_constraintTop_toBottomOf="@+id/tutor_name" />

    <TextView
        android:id="@+id/session_type"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="@string/session_type"
        android:textAlignment="center"
        android:textColor="@color/ELPurple"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <TextView
        android:id="@+id/topic"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/topic"
        android:textAlignment="center"
        android:textColor="@color/ELPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_type"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/start_session"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/start_session"
        android:textAlignment="center"
        android:textColor="@color/ELPurple"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic" />


    <TextView
        android:id="@+id/end_session"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/end_session"
        android:textAlignment="center"
        android:textColor="@color/ELPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/end_session_edit"
        app:layout_constraintTop_toBottomOf="@+id/start_session"
        app:layout_constraintVertical_bias="0.278" />

    <EditText
        android:id="@+id/tutor_name_edit"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/textbox_background"
        android:ems="10"
        android:inputType="none"
        android:paddingLeft="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_beginning_text" />

    <EditText
        android:id="@+id/course_name_edit"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/textbox_background"
        android:ems="10"
        android:inputType="none"
        android:paddingLeft="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutor_name_edit" />

    <EditText
        android:id="@+id/topic_edit"
        android:layout_width="180dp"
        android:layout_height="78dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/textbox_background"
        android:hint="@string/topic_helper_text"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintLeft_toRightOf="@+id/topic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_type_dropdown"
        tools:layout_editor_absoluteY="289dp" />

    <EditText
        android:id="@+id/start_session_edit"
        android:layout_width="85dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/textbox_background"
        android:ems="10"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintLeft_toRightOf="@+id/start_session"
        app:layout_constraintRight_toLeftOf="@+id/start_session_dropdown_time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <EditText
        android:id="@+id/end_session_edit"
        android:layout_width="85dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textbox_background"
        android:ems="10"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/ELPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintLeft_toRightOf="@+id/tutor_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_session_edit"
        app:layout_constraintVertical_bias="0.289" />

    <Spinner
        android:id="@+id/session_type_dropdown"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="33dp"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintLeft_toRightOf="@+id/session_type"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name_edit" />

    <Spinner
        android:id="@+id/start_session_dropdown_time"
        android:layout_width="68dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_edit" />

    <Spinner
        android:id="@+id/end_session_dropdown_time"
        android:layout_width="68dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/end_session_edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_session_dropdown_time"
        app:layout_constraintVertical_bias="0.308" />

    <Button
        android:id="@+id/btn_send_request"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginTop="607dp"
        android:background="@drawable/button_background"
        android:text="@string/button_send_request"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
