<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.excellassonde.bookatutor.SessionReview">

    <TextView
        android:id="@+id/alert_beginning_text"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/alert_beginning_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.493" />

    <TextView
        android:id="@+id/tutor_name"
        android:layout_width="92dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/tutor_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/course_name"
        android:layout_width="92dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/course_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutor_name"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/session_type"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/session_type"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/topic"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/topic"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_type"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/start_session"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/start_session"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/start_session_edit"
        app:layout_constraintTop_toBottomOf="@+id/topic"
        app:layout_constraintVertical_bias="0.266" />


    <TextView
        android:id="@+id/end_session"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/end_session"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/end_session_edit"
        app:layout_constraintTop_toBottomOf="@+id/start_session"
        app:layout_constraintVertical_bias="0.435" />

    <EditText
        android:id="@+id/tutor_name_edit"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textbox_background"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintLeft_toRightOf="@+id/tutor_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/course_name_edit"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/textbox_background"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintLeft_toRightOf="@+id/tutor_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutor_name_edit" />

    <EditText
        android:id="@+id/topic_edit"
        android:layout_width="202dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_background"
        android:ems="10"
        android:hint="@string/topic_helper_text"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintLeft_toRightOf="@+id/tutor_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_type_dropdown"
        app:layout_constraintVertical_bias="0.074" />

    <EditText
        android:id="@+id/start_session_edit"
        android:layout_width="85dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_background"
        android:ems="10"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintLeft_toRightOf="@+id/tutor_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_edit"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/end_session_edit"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/textbox_background"
        android:ems="10"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintLeft_toRightOf="@+id/tutor_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_session_edit"
        app:layout_constraintVertical_bias="0.436" />

    <Spinner
        android:id="@+id/session_type_dropdown"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textbox_background"
        android:entries="@array/session_type_dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintLeft_toRightOf="@+id/session_type"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name_edit"
        app:layout_constraintVertical_bias="0.121" />

    <Spinner
        android:id="@+id/start_session_dropdown_time"
        android:layout_width="68dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/textbox_background"
        android:entries="@array/time_list"
        app:layout_constraintLeft_toRightOf="@+id/start_session_edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_edit"
        app:layout_constraintHorizontal_bias="0.0" />

    <Spinner
        android:id="@+id/end_session_dropdown_time"
        android:layout_width="68dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textbox_background"
        android:entries="@array/time_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintLeft_toRightOf="@+id/end_session_edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_session_dropdown_time"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="279dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:onClick="goToConfirmation"
        android:text="@string/button_send_request"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_session"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
